@@ -1,5 +1,13 @@
 2008-02-21  Bastien Nocera  <hadess@hadess.net>
 
+	* src/backend/bacon-video-widget-xine.c
+	(bacon_video_widget_set_connection_speed),
+	(bacon_video_widget_get_connection_speed):
+	Use the fastest speed as the default connection speed,
+	so we don't get low quality videos by default
+
+2008-02-21  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/totemNarrowSpacePlugin.cpp:
 	* browser-plugin/totemPlugin.cpp:
 	* browser-plugin/totemPlugin.h:
